<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/background_light"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--android:weightSum="2">-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--android:layout_weight="1">-->

                <Button
                    android:id="@+id/timetable"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="sans-serif-smallcaps"
                    android:onClick="goToTimetableActivity"
                    android:text="@string/timetable"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calendar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="sans-serif-smallcaps"
                    android:onClick="goToCalendarActivity"
                    android:text="@string/calendar"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <!-- <Button
                 android:id="@+id/canteen_menu"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_margin="3dp"
                 android:background="@drawable/round_button"
                 android:fontFamily="sans-serif-smallcaps"
                 android:text="@string/canteen_menu"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:textSize="24sp" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:text="@string/links"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="openNoticeBoard"
                android:paddingStart="10dp"
                android:text="@string/notice_board"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="openOTHHomepage"
                android:paddingStart="10dp"
                android:text="@string/oth_homepage"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="openGRIPS"
                android:paddingStart="10dp"
                android:text="@string/grips"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="openWebmail"
                android:paddingStart="10dp"
                android:text="@string/oth_webmail"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="openQIS"
                android:paddingStart="10dp"
                android:text="@string/qis"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="openFSIM"
                android:paddingStart="10dp"
                android:text="@string/fsim"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="openModules"
                android:paddingStart="10dp"
                android:text="@string/elective_modules"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
