<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/manageCourses"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/manageCourses"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible" />

        <Button
            android:id="@+id/manageExerciseCourses"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/manageExerciseCourses"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible" />

        <Button
            android:id="@+id/importCourses"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/importCourses"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>