<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/timetable_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/background_light"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">
            <TableRow
                android:id="@+id/tableRowHeader"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textViewStudyGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:text="@string/defaultNoGroup"
                    android:layout_span="6"></TextView>

            </TableRow>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TableRow
                android:id="@+id/tableRowDays"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/TextViewTime"
                    android:maxWidth="30dp"
                    android:text="@string/time"></TextView>

                <View
                    android:id="@+id/divider6"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/TextViewDay1"
                    android:text="@string/monday"
                    android:minWidth="30dp"

                    android:textStyle="bold"></TextView>
                <TextView
                    android:id="@+id/TextViewDay2"
                    android:text="@string/tuesday"
                    android:textStyle="bold"></TextView>
                <TextView
                    android:id="@+id/TextViewDay3"
                    android:text="@string/wednesday"
                    android:textStyle="bold"></TextView>
                <TextView
                    android:id="@+id/TextDay4"
                    android:text="@string/thursday"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/textDay5"
                    android:text="@string/friday"
                    android:textStyle="bold"></TextView>
            </TableRow>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/tableRowLesson1"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/textViewLesson1"
                    android:maxWidth="30dp"
                    android:text="08:15-09:45">

                </TextView>

                <View
                    android:id="@+id/divider7"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/mondayLesson1"
                    android:minWidth="30dp"
                    android:gravity="center_horizontal"
                    android:scrollHorizontally="false"
                    android:text="-"></TextView>

                <TextView
                    android:text="-"
                    android:id="@+id/tuesdayLesson1"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/wednesdayLesson1"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/thursdayLesson1"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/fridayLesson1"
                    android:gravity="center_horizontal"></TextView>

            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/tableRowLesson2"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/textViewLesson2"
                    android:maxWidth="30dp"
                    android:text="10:00-11:30"></TextView>

                <View
                    android:id="@+id/divider8"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/mondayLesson2"
                    android:minWidth="30dp"
                    android:gravity="center_horizontal"
                    android:text="-"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/tuesdayLesson2"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/wednesdayLesson2"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/thursdayLesson2"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/fridayLesson2"
                    android:gravity="center_horizontal"></TextView>

            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/tableRowLesson3"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/textViewLesson3"
                    android:maxWidth="30dp"
                    android:text="11:45-13:15"></TextView>

                <View
                    android:id="@+id/divider9"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/mondayLesson3"
                    android:minWidth="30dp"
                    android:gravity="center_horizontal"
                    android:text="-"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/tuesdayLesson3"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/wednesdayLesson3"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/thursdayLesson3"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/fridayLesson3"
                    android:gravity="center_horizontal"></TextView>

            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/tableRowLesson4"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/textViewLesson4"
                    android:maxWidth="30dp"
                    android:text="13:30-15:00"></TextView>

                <View
                    android:id="@+id/divider10"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/mondayLesson4"
                    android:minWidth="30dp"
                    android:gravity="center_horizontal"
                    android:text="-"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/tuesdayLesson4"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/wednesdayLesson4"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/thursdayLesson4"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/fridayLesson4"
                    android:gravity="center_horizontal"></TextView>

            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/tableRowLesson5"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/textViewLesson5"
                    android:maxWidth="30dp"
                    android:text="15:15-16:45"></TextView>

                <View
                    android:id="@+id/divider11"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/mondayLesson5"
                    android:minWidth="30dp"
                    android:gravity="center_horizontal"
                    android:text="-"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/tuesdayLesson5"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/wednesdayLesson5"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/thursdayLesson5"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/fridayLesson5"
                    android:gravity="center_horizontal"></TextView>

            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/tableRowLesson6"
                android:layout_width="match_parent">
                <TextView
                    android:text="17:00-18:30"
                    android:id="@+id/textViewLesson6"
                    android:maxWidth="30dp"></TextView>

                <View
                    android:id="@+id/divider12"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/mondayLesson6"
                    android:minWidth="30dp"
                    android:gravity="center_horizontal"
                    android:text="-"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/tuesdayLesson6"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/wednesdayLesson6"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/thursdayLesson6"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/fridayLesson6"
                    android:gravity="center_horizontal"></TextView>

            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/tableRowLesson7"
                android:layout_width="match_parent">
                <TextView
                    android:text="18:45-20:15"
                    android:id="@+id/textViewLesson7"
                    android:maxWidth="30dp"></TextView>

                <View
                    android:id="@+id/divider13"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/mondayLesson7"
                    android:minWidth="30dp"
                    android:gravity="center_horizontal"
                    android:text="-"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/tuesdayLesson7"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/wednesdayLesson7"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/thursdayLesson7"
                    android:gravity="center_horizontal"></TextView>
                <TextView
                    android:text="-"
                    android:id="@+id/fridayLesson7"
                    android:gravity="center_horizontal"></TextView>

            </TableRow>

        </TableLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Press to update"
        android:onClick="updateView"/>

    <ProgressBar
        android:id="@+id/taskProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="invisible"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/taskTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/taskProgressBar"
        android:layout_gravity="bottom|center_horizontal"
        app:layout_anchorGravity="bottom|center_horizontal"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

</LinearLayout>